src/main/java/com/example/auctionwebapp/userManagement/common/error/ResourceNotFoundException.java
package com.example.auctionwebapp.userManagement.common.error;

public class ResourceNotFoundException {
}
